--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-проверка
+Еще одна проверка
   </body>
 </html>
